ImpressCMS ChangeLog

=========================================
2008-03-02 : ImpressCMS 1.0 "Janus" RC 3
=========================================

- Improved : Improved system_redirect template in impresstheme theme (Snow/malanciault/Underdogg/davidl2)
- Improved : Improved system_siteclose template in impresstheme theme (Snow/malanciault/Underdogg/davidl2)
- Fixed : #1905281 Redirect function not using the user selected theme (malanciault)
- Fixed : the ImpressCMS logo used on impresstheme as well as in the admin section have been updated (nekro/MrTheme)
- Added : Addition of the global navigationlink in impresstheme theme (mcdonald/skenow/malanciault)
- Added : Addition of the danish flag (anderssk)
- Added : Addition of the persian flag (malanciault)
- Added : definitions for ul and li in impresstheme (McDonald/snow/malanciault)
- Added : New module added in admin: ImpressCMS Version Checker (malanciault/nekro/MrTheme/davidl2)
- Added : A new Welcome custom block is now added by the install wizard to welcome the "not-yet-loged" user on the new site (malanciault/MrTheme/davidl2)
- Added : A new Welcome custom block is now added by the install wizard to welcome the webmaster when loged in and to remind him some useful links to start his new ImpressCMS website (malanciault/MrTheme/davidl2)

=========================================
2008-02-24 : ImpressCMS 1.0 "Janus" RC 2
=========================================

- Added : New smarty variable now available, <{$icmsLang}> representing the selected language. For example, if French is the current language selected by the user, then the value of this variable will be "french". (malanciault/davidl2)
- Fixed : Revision 955: Display issues with impresstheme. (Snow)
- Fixed : #1891588: Timezone offset empty (compatibility issue with versions of PHP aswell as operating system when using floats. (changed to an integer value instead). (vaughan</jegelstaff)